# gridgen

./: .gitignore  README.md  meson.build  pixi.toml
.github/workflows/: ci.yml  compilers.yml
src/: meson.build
src/basic/: meson.build
src/grid/: meson.build
src/intersection/: meson.build
src/tools/: meson.build
test/: grid02qtg.dfn
test/output_shapefiles/: readme.txt
